# MakeYourPodcast

./: .env.template  .gitignore  CREDENTIALS_GUIDE.md  DESIGN_DOC.md  OPENROUTER_SUMMARY.md  PODCAST_README.md  QUICKSTART.md  configure_credentials.sh  create_podcast.py  generate_podcast.py  podcast.md  podcast_doc.md  pyproject.toml  requirements.txt  setup_podcast.sh  test_direct_gemini.py  test_gemini_connection.py
examples/: custom_podcast.py
inference/: CHANGES_OPENROUTER_ONLY.md  CHEATSHEET.md  INSTALL.md  INSTALL_COMPARISON.md  OPENROUTER_SETUP.md  QUICKSTART_OPENROUTER.md  README_OPENROUTER.md  SETUP_SUMMARY.md  START_HERE.md  react_agent_openrouter.py  requirements-openrouter.txt  run_openrouter.py  run_openrouter_yang.sh  test_jina.py  tool_visit.py  verify_openrouter_setup.py
podcastfy-main/: Dockerfile  example_docker.py  test_docker.py  test_working.py
podcastfy-main/podcastfy/: content_generator.py
