[project]
name = "deepresearch-openrouter"
version = "1.0.0"
description = "DeepResearch with OpenRouter - No local model deployment needed"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Qwen Team"}
]
keywords = ["ai", "agent", "research", "openrouter", "qwen"]

dependencies = [
    # Core OpenAI SDK for OpenRouter
    "openai>=1.0.0",
    # Agent framework
    "qwen-agent>=0.0.26",
    # HTTP & Web
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "aiohttp==3.12.15",
    # CLI & UI
    "rich>=14.0.0",
    "python-dotenv>=1.0.0",
    # JSON & Data Processing
    "json5>=0.9.0",
    "jsonlines>=4.0.0",
    "pydantic>=2.0.0",
    # Token counting
    "tiktoken>=0.6.0",
    # Code execution (for PythonInterpreter tool)
    "sandbox-fusion>=0.3.0",
    # File parsing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "pdfminer-six>=20221105",
    "python-pptx>=1.0.0",
    "pillow>=10.0.0",
    "pypdfium2>=4.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "tenacity>=8.0.0",
    "python-dateutil>=2.8.0",
    "tabulate>=0.9.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.4.0",
    "alibabacloud-credentials==1.0.2",
    "alibabacloud-credentials-api==1.0.0",
    "alibabacloud-docmind-api20220711==1.4.11",
    "alibabacloud-gateway-spi==0.0.3",
    "alibabacloud-tea==0.4.3",
    "alibabacloud-tea-openapi==0.4.1",
    "alibabacloud-tea-util==0.3.13",
    "alibabacloud-aipodcast20250228>=1.0.4",
]

[project.optional-dependencies]
# For file parsing with IDP (Alibaba Document Parser)
idp = [
    "alibabacloud-docmind-api20220711>=1.4.0",
    "alibabacloud-tea-openapi>=0.4.0",
    "alibabacloud-credentials>=1.0.0",
]

# For video analysis
video = [
    "opencv-python-headless>=4.0.0",
    "soundfile>=0.12.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inference"]

[tool.setuptools.package-data]
inference = ["*.py", "file_tools/*.py"]

[project.scripts]
deepresearch = "inference.run_openrouter:main"

[project.urls]
Homepage = "https://github.com/QwenLM/DeepResearch"
Documentation = "https://github.com/QwenLM/DeepResearch/blob/main/README.md"
Repository = "https://github.com/QwenLM/DeepResearch"
